@@ -1,6 +1,6 @@
 /*
  * BlueALSA - bluez.h
- * Copyright (c) 2016-2019 Arkadiusz Bokowy
+ * Copyright (c) 2016-2020 Arkadiusz Bokowy
  *
  * This file is a part of bluez-alsa.
  *
@@ -10,6 +10,12 @@
 
 #ifndef BLUEALSA_BLUEZ_H_
 #define BLUEALSA_BLUEZ_H_
+
+#include <stdbool.h>
+
+#include <glib.h>
+
+#include "a2dp.h"
 
 /* List of Bluetooth audio profiles. */
 #define BLUETOOTH_UUID_A2DP_SOURCE "0000110A-0000-1000-8000-00805F9B34FB"
@@ -21,5 +27,10 @@
 
 void bluez_register(void);
 int bluez_subscribe_signals(void);
+
+bool bluez_a2dp_set_configuration(
+		const char *dbus_current_sep_path,
+		const struct a2dp_sep *sep,
+		GError **error);
 
 #endif
