@@ -17,6 +17,7 @@
 
 #include <check.h>
 
+#include "../src/a2dp.c"
 #include "../src/ba-adapter.c"
 #include "../src/ba-device.c"
 #include "../src/ba-rfcomm.c"
@@ -56,6 +57,10 @@ void bluealsa_dbus_rfcomm_unregister(struct ba_rfcomm *r) {
 	debug("%s: %p", __func__, (void *)r); }
 int a2dp_audio_thread_create(struct ba_transport *t) { (void)t; return -1; }
 void *sco_thread(struct ba_transport *t) { return sleep(3600), t; }
+bool bluez_a2dp_set_configuration(const char *current_dbus_sep_path,
+		const struct a2dp_sep *sep, GError **error) {
+	debug("%s: %s", __func__, current_dbus_sep_path); (void)sep;
+	(void)error; return false; }
 
 START_TEST(test_rfcomm) {
 
