@@ -2,6 +2,8 @@ unreleased
 ==========
 
 - separate D-Bus paths for PCM sink and source (API breakage)
+- list available and supported audio codecs via D-Bus API
+- support for A2DP audio codec selection or reconfiguration
 - fix SBC encoder bit-pool selection (support SBC XQ quality)
 - allow to disable software volume scaling via D-Bus API
 - improve PCM I/O plug-in delay heuristic (fix VLC playback)
